F&GDEV/src/objects/AgentSales__c.object
<CustomObject>
    <fields>
        <fullName>AgentID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentID</label>
        <referenceTo>AgentID__c</referenceTo>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgentPlanMonth__c</fullName>
        <externalId>true</externalId>
        <label>Agent ID Plan Month (ID)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssuedPolicies__c</fullName>
        <label>Issued Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IssuedWrittenPolicies__c</fullName>
        <label>Issued Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JuneTAP__c</fullName>
        <formula>if( Month__c = DATE(2010,6,1) , TAPAmount__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JuneTAP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlanCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Code</label>
        <referenceTo>PlanCode__c</referenceTo>
        <relationshipName>Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SuperMasterPlanMonth__c</fullName>
        <externalId>true</externalId>
        <label>Account Plan Month (ID)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAPAmount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TAPPolicies__c</fullName>
        <label>TAP Count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAPWrittenPolicies__c</fullName>
        <label>TAP Count as WA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agent ID Production</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AgentID PlanCode Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent ID Production</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>